ver201604template.sdk/.metadata/.plugins/org.eclipse.cdt.ui/cpu1_baremetal_app_matrix.build.log
02:23:45 **** Build of configuration Debug for project cpu1_baremetal_app_matrix ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helper.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helper.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../cpu1_echo_bsp/ps7_cortexa9_1/include -MMD -MP -MF"src/helper.d" -MT"src/helper.o" -o "src/helper.o" "../src/helper.c"
'Finished building: ../src/helper.c'
' '
'Building file: ../src/matrix_multiply.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/matrix_multiply.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../cpu1_echo_bsp/ps7_cortexa9_1/include -MMD -MP -MF"src/matrix_multiply.d" -MT"src/matrix_multiply.o" -o "src/matrix_multiply.o" "../src/matrix_multiply.c"
../src/matrix_multiply.c: In function 'ScuTimerIntrExample':
../src/matrix_multiply.c:475:6: warning: unused variable 'LastTimerExpired' [-Wunused-variable]
  int LastTimerExpired = 0;
      ^
../src/matrix_multiply.c: In function 'TimerIntrHandler':
../src/matrix_multiply.c:658:35: error: 'rp_chnl' undeclared (first use in this function)
   if (RPMSG_SUCCESS != rpmsg_send(rp_chnl, &Send_data, 3*sizeof(unsigned))) {
                                   ^
../src/matrix_multiply.c:658:35: note: each undeclared identifier is reported only once for each function it appears in
../src/matrix_multiply.c: At top level:
../src/matrix_multiply.c:176:13: warning: 'Matrix_Multiply' defined but not used [-Wunused-function]
 static void Matrix_Multiply(const matrix *m, const matrix *n, matrix *r)
             ^
make: *** [src/matrix_multiply.o] Error 1

02:23:46 Build Finished (took 1s.18ms)

